# DEX-OS-V2

./: .gitignore  AI_TREASURY_AND_ATOMIC_SWAPS_IMPLEMENTATION.md  BPLUS_TREE_CERTIFICATE_SECURITY_TESTS.md  CHANGELOG.md  Cargo-minimal.toml  Cargo.toml  DEX-OS-SETUP.CSV  DEX-OS-V1.csv  DEX-OS-V2.csv  DEX_AGGREGATOR_SECURITY_ANALYSIS.md  DEX_AGGREGATOR_TESTING_PLAN.md  GLOBAL_IDENTITY_FEATURES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_PRIORITY_2_FEATURES.md  INFRASTRUCTURE_SECURITY_COMPLIANCE.md  PRIORITY_1_DEX_AGGREGATOR_IMPLEMENTATION.md  PROJECT_SUMMARY.md  RAMP.MD  README.md  RULES.md  bloom_filter_standalone_test.rs  dev-tools.bat  dev-tools.sh  dex-os-ramp-json-rpc-methods.json  dex-os-ramp-json-rpc-schema.json  feature-implementation-summary.md  hello_test.rs  implemented_features.txt  minimal-main.rs  official-estimated-total-testings-per-layer.csv  payments_test.rs  priority-3-features-implementation-status.md  simple-dockerfile  simple-server.py  test-wsl.rs  universal-payments-implementation-summary.md
.reference/: detection_response_tests_full.csv  gov_implement.md  governance_compliance_full.csv  governance_compliance_full_enriched.csv  potential-data-leak.md  protection_tests_full.csv  resilience_recovery.csv  testing_web3_full.csv  unimplemented-features3.md
bloom_filter_demo/: Cargo.toml  main.rs  src.rs  temp.toml
bloom_filter_test_coverage_demo/: Cargo.toml
dex-core/: Cargo.toml
dex-core/src/: atomic_swaps.rs  avl_tree.rs  cross_chain_asset_mapping.rs  gas_abstraction.rs  governance.rs  identity.rs  indexer.rs  keeper.rs  lending.rs  lib.rs  observability.rs  orderbook.rs  path_routing.rs  payments.rs  price_prediction.rs  quadratic_voting.rs  quantum_consensus.rs  security.rs  snapshot.rs  test_coverage.rs  test_results.rs  treasury.rs
dex-core/src/consensus/: mod.rs  raft.rs
dex-core/src/crypto/: mod.rs  zk_proof.rs
dex-core/src/governance/: audit.rs  compliance.rs  iam.rs  mod.rs  policy_engine.rs  reference.rs  risk.rs
dex-core/src/network/: gossip.rs  gossip_sync.rs  mod.rs
dex-core/tests/: audit_evidence.rs  audit_negative.rs  dao_audit_integration.rs  governance_reference.rs  governance_reference_loader.rs  reference_common.rs  reference_matrices.rs  security_reference_usage.rs
dex-db/: Cargo.toml
dex-db/src/: lib.rs  migrations.rs
docs/: AI_TREASURY_AND_ATOMIC_SWAPS_IMPLEMENTATION.md  BLOOM_FILTER_TEST_COVERAGE_FINAL_IMPLEMENTATION.md  BLOOM_FILTER_TEST_COVERAGE_IMPLEMENTATION.md  (+65 more)
test_coverage_demo/: Cargo.toml
test_coverage_demo/src/: main.rs
(+35 files in other folders)
