[package]
name = "dex-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0"
sha2 = "0.10"
sha3 = "0.10"
regex = "1.0"
csv = "1.3"
once_cell = "1.19"
tokio = { workspace = true }
# Cryptographic libraries for security features
ed25519-dalek = "2.0"
rand = "0.8"
zeroize = "1.6"

tokio-test = "0.4"
