[package]
name = "dex-db"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
dex-core = { path = "../dex-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "tls-rustls"] }
thiserror = "1.0"
